[gd_scene load_steps=15 format=3 uid="uid://cg8v3gnoxlrle"]

[ext_resource type="PackedScene" uid="uid://c3xyhwelbeuur" path="res://scenes/player.tscn" id="1_3f3uf"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_16jqa"]
[ext_resource type="PackedScene" uid="uid://cgds77hwfsfbj" path="res://scenes/map.tscn" id="2_47jpl"]
[ext_resource type="Texture2D" uid="uid://c2abckfwpsjia" path="res://assets/interface/hp.png" id="3_1dgtj"]
[ext_resource type="Texture2D" uid="uid://c0hd2v764s0u5" path="res://assets/interface/game_over.png" id="3_81pug"]
[ext_resource type="PackedScene" uid="uid://c82wcpf0xsbso" path="res://scenes/gui_levelup.tscn" id="3_g73d3"]
[ext_resource type="Texture2D" uid="uid://s4nhspcfh0x6" path="res://assets/interface/xp.png" id="4_ol4ju"]
[ext_resource type="PackedScene" uid="uid://vwdp52gf1jhy" path="res://scenes/enemy.tscn" id="4_p6mo0"]
[ext_resource type="PackedScene" uid="uid://dumjyv013fh2u" path="res://scenes/music.tscn" id="9_wrgfl"]

[sub_resource type="Curve2D" id="Curve2D_gdyfh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -590, -307, 0, 0, 0, 0, 1841, -307, 0, 0, 0, 0, 1844, 1104, 0, 0, 0, 0, -590, 1108, 0, 0, 0, 0, -590, -289)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ndm5"]
bg_color = Color(0.129412, 0.0862745, 0, 0.835294)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2b5i"]
bg_color = Color(1, 0, 0.0833335, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_svj2v"]
bg_color = Color(0.1722, 0.442117, 0.82, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="GDScript" id="GDScript_fg0sh"]
script/source = "extends CanvasLayer

	
"

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_16jqa")

[node name="Map" parent="." instance=ExtResource("2_47jpl")]
position = Vector2(647, 411)

[node name="Player" parent="." instance=ExtResource("1_3f3uf")]
position = Vector2(647, 411)

[node name="Music" parent="Player" instance=ExtResource("9_wrgfl")]
position = Vector2(-647, -411)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-647, -411)
curve = SubResource("Curve2D_gdyfh")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
position = Vector2(-590, -307)

[node name="MobSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="HUD"]
offset_left = 178.0
offset_top = 77.0
offset_right = 474.0
offset_bottom = 104.0
scale = Vector2(1.29408, 1.44453)
theme_override_styles/background = SubResource("StyleBoxFlat_0ndm5")
theme_override_styles/fill = SubResource("StyleBoxFlat_g2b5i")
value = 50.0
show_percentage = false

[node name="Hp" type="Sprite2D" parent="HUD"]
position = Vector2(299, 96)
scale = Vector2(0.286031, 0.286031)
texture = ExtResource("3_1dgtj")

[node name="XPBar" type="ProgressBar" parent="HUD"]
offset_left = 1100.0
offset_top = 81.0
offset_right = 1396.0
offset_bottom = 108.0
scale = Vector2(1.10593, 1.23584)
theme_override_styles/background = SubResource("StyleBoxFlat_0ndm5")
theme_override_styles/fill = SubResource("StyleBoxFlat_svj2v")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="Xp" type="Sprite2D" parent="HUD"]
position = Vector2(1311, 95)
texture = ExtResource("4_ol4ju")

[node name="GameOver" type="CanvasLayer" parent="."]
process_mode = 1
visible = false
script = SubResource("GDScript_fg0sh")

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231373, 0.231373, 0.231373, 0.623529)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = 156.0
offset_right = 230.0
offset_bottom = 369.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "GAME OVER
again?"
horizontal_alignment = 1

[node name="GameOver" type="Sprite2D" parent="GameOver/ColorRect"]
position = Vector2(785, 302)
scale = Vector2(0.738053, 0.738053)
texture = ExtResource("3_81pug")

[node name="LevelUp" parent="." instance=ExtResource("3_g73d3")]
visible = false

[node name="BossCarbon" parent="." instance=ExtResource("4_p6mo0")]
position = Vector2(-1600, 2500)
metadata/type = "carbon"
metadata/is_grunt = false

[node name="BossChlorine" parent="." instance=ExtResource("4_p6mo0")]
position = Vector2(2800, -1800)
metadata/type = "chlorine"
metadata/is_grunt = false

[node name="BossHydrogen" parent="." instance=ExtResource("4_p6mo0")]
position = Vector2(-1600, -1800)
metadata/type = "hydrogen"
metadata/is_grunt = false

[node name="BossOxygen" parent="." instance=ExtResource("4_p6mo0")]
position = Vector2(2800, 2500)
metadata/type = "oxygen"
metadata/is_grunt = false

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="should_level_up" from="Player" to="." method="_on_player_should_level_up"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
